@@ -1,3 +1,8 @@
+11-05-20 : Reworked spell crit
+           - Increased crit range to between .1% and 10%
+           - Wisdom and to a smaller extent Karma determine the rate
+           Mobs can no longer crit skills and spells
+
 09-24-20 : Fixed a crash bug <3
 
 09-15-20 : Non-warriors should find honing defense and advanced defense
